--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #fff;
+		background: #fff5db;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -135,7 +135,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #787878;
+		color: #444443;
 		font-weight: 400;
 		line-height: 1em;
 		margin: 0 0 1em 0;
